[tool.poetry]
name = "survival-curve-extractor"
version = "1.3.4"
description = "Tool for extracting survival curve data from images using pure Python"
authors = ["User <user@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.15"
pillow = "^10.0.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"